<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Card Manager</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="image_description">This is Image</string>
    <string name="image_description1">This is Image 1</string>
    <string name="image_description2">This is Image 2</string>
    <string name="registration">Registration</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Reenter Password</string>
    <string name="registration_done">Done</string>
    <string name="registration_back">Back</string>
    <string name="title_activity_main_menu">Menu</string>
    <string name="newcard">New card Entry</string>
    <string name="editcard">Delete Existing Card</string>
    <string name="viewcard">View Card</string>
    <string name="searchcard">Search Card</string>
    <string name="title_activity_card_entry">Card Entry Activity</string>
    <string name="card_hint">Card No/Cupon Code/Account Id</string>
    <string name="card_name_hint">Card name(Which should remind you) </string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_date">Validity Date(dd/mm/yy)</string>
    <string name="card_pin">Enter PIN</string>
    <string name="card_cvv">Enter CVV</string>
    <string name="card_pass">Password</string>
    <string name="card_debit">Debit Card</string>
    <string name="card_credit">Credit Card</string>
    <string name="card_promo">Promo Code</string>
    <string name="card_visiting">Visiting Card</string>
    <string name="netbenking">Net Banking</string>
    <string name="card_shoping">Shopping Card</string>
    <string name="card_others">Others</string>
    <string name="submit">Submit</string>
    <string name="reminder">Reminder</string>
    <string name="title_activity_view_card2">View_card2</string>
    <string name="bank_name">Bank Name</string>
    <string name="title_activity_allcardno">Allcardno</string>
    <string name="result">No card Found!</string>
    <string name="title_activity_edit_card">EditCard</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="action_bar">About us</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_logout">Logout</string>
    <string name="update">Update Card</string>
    <string name="title_activity_main_delete1">MainDelete1</string>
    <string name="title_activity_delete1">Delete1</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_aboutus">About Us</string>
    <string name="action_about">About Us</string>

</resources>
