
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CardEntryActivity"
    android:layout_gravity="center" >

    <EditText
        android:id="@+id/Card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_hint"
        android:textColorHint="#800080"
        android:inputType="text" 
        android:layout_gravity="center" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/Card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_name_hint"
        android:textColorHint="#800080"
        android:inputType="textPersonName"
        android:layout_gravity="center" >
        
        <requestFocus />
        </EditText>
    
    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <EditText
            android:id="@+id/Card_cvv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/card_cvv"
            android:textColorHint="#800080"
            android:inputType="number" 
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/card_pin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/card_pin"
            android:textColorHint="#800080"
            android:inputType="numberPassword"
            android:layout_gravity="center" />
    </LinearLayout>
    

        <EditText
            android:id="@+id/Card_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/card_holder_name"
            android:textColorHint="#800080"
            android:inputType="textPersonName"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/Validity_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/card_date"
            android:textColorHint="#800080"
            android:inputType="date"
            android:layout_gravity="center">
		<requestFocus />
        </EditText>
   <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <EditText
            android:id="@+id/Card_pass"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/card_pass"
            android:textColorHint="#800080"
            android:inputType="textPassword"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/Card_bank_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bank_name"
            android:textColorHint="#800080"
            android:inputType="text"
            android:layout_gravity="center" />
   </LinearLayout>


<RadioGroup
    android:id="@+id/radioGroup1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/card_debit"
        android:textColor="#008000"
        android:textSize="20dp" />

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_credit"
        android:textColor="#008000"
        android:textSize="20dp" />
    
     <RadioButton
        android:id="@+id/radio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/netbenking"
        android:textSize="20dp"
        android:textColor="#008000" />
     
     <RadioButton
        android:id="@+id/radio4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_shoping"
        android:textSize="20dp"
        android:textColor="#008000" />
     
     <RadioButton
        android:id="@+id/radio5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_others"
        android:textSize="20dp"
        android:textColor="#008000" />
     
</RadioGroup>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
   android:layout_gravity="center" 
   android:layout_marginTop="5dp">
     
    <Button
            android:id="@+id/submit"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="#97CEEB"
            android:text="@string/submit" 
            android:layout_gravity="center" />

        <Button
            android:id="@+id/reminder"
            android:layout_marginLeft="30dp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="Reminder"
            android:textColor="#FFFFFF" 
            android:layout_gravity="center" />
       
</LinearLayout>

</LinearLayout>