<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:src="@drawable/credit_card"
        android:contentDescription="@string/image_description"
        android:layout_gravity="center" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_debit"
            android:background="#97CEEB" 
            android:layout_gravity="center"
            android:layout_marginBottom="18dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_credit"
            android:background="#800080" 
            android:layout_gravity="center"
            android:layout_marginBottom="18dp" />


        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_shoping"
            android:background="#FF00FF" 
            android:layout_gravity="center"
            android:layout_marginBottom="18dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/netbenking"
            android:background="#008000"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp" />

	    <Button
	        android:id="@+id/button7"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/card_others"
	        android:background="#FFA500" 
	        android:layout_gravity="center"
	        android:layout_marginBottom="18dp" />

</LinearLayout>
</ScrollView>