<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >


<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:src="@drawable/credit_card"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/newcard"
        android:layout_gravity="center"
        android:background="#87CEEB" 
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/viewcard"
        android:layout_gravity="center"
        android:background="#008000"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/editcard"
        android:layout_gravity="center"
        android:background="#FFA500" 
        android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/update"
        android:layout_gravity="center"
        android:background="#FFFF00" 
        android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/changepassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Change Password"
        android:layout_gravity="center"
        android:background="#800080" 
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/title_activity_logout" 
        android:layout_gravity="center"
        android:background="#ff0000" />

</LinearLayout>
</ScrollView>